tests/sumo/cf_model/errors/tau_below_stepsize/errors.sumo.agg
Warning: 1 total messages of type: Teleporting vehicle 'follower'; collision with vehicle 'leader', lane='%', gap=%%, time=%, stage=%.
Warning: 1 total messages of type: Value of tau=% in vehicle type '%' lower than simulation step size may cause collisions.
Warning: 1 total messages of type: Vehicle '%' ends teleporting on edge '%', time=%.
